@@ -2,6 +2,10 @@ git-annex (10.20240702) UNRELEASED; urgency=medium
 
   * assistant: Fix a race condition that could cause a pointer file to
     get ingested into the annex.
+  * Avoid potential data loss in situations where git-annex-shell or
+    git-annex remotedaemon is killed while locking a key to prevent its
+    removal.
+  * Added a dependency on clock.
 
  -- Joey Hess <id@joeyh.name>  Tue, 02 Jul 2024 12:14:53 -0400
 
